# ZJU-FDS25-Project2

./: .gitignore  CMakeLists.txt  Hard Autograd for Algebraic Expressions.tex  Problem.md  README.md  自动求导实现解析.md
code/: CMakeLists.txt  README.md  ast.c  ast.h  astmath.c  astmath.h  differentiate.c  differentiate_simplified.c  simplificator.c  stack.c  stack.h  test.c  test2.c  utils.c  utils.h
code/ads/: hashtable.c  hashtable.h  stack.c  stack.h
code/ast/: ast.c  ast.h  astmath.c  astmath.h  stack.c  stack.h
code/simplificator/: experssionobj.c  expressionobj.c  expressionobj.h  monomial.c  monomial.h  one_layer.c  one_layer.h  polynomial.c  polynomial.h
code/test/: test2.c
document/: Hard Autograd for Algebraic Expressions.tex
